--- a/src/App.css
+++ b/src/App.css
@@ -44,16 +44,25 @@
 .btnsignin {
   background-color: transparent;
   border-color: white;
+  border: 2px solid;
 }
 /* banner */
 .herosection {
-  background-image: url(https://images.unsplash.com/photo-1695705225025-5acd9a63c837?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
-  height: 100vh;
-  width: 100%;
-  background-repeat: no-repeat;
+  background-image: url(../Pictures/bg.jpg);
+  height: 920px;
+  /* width: 100%; */
+  /* width: 1920px; */
+  /* background-repeat: no-repeat; */
+  object-fit: contain;
 }
 .herotext {
-  
+  width: 729px;
+  height: 354px;
+  top: 237px;
+  left: 159px;
+  gap: 0px;
+  opacity: 0px;
+  padding: 6rem;
 }
 .rgbtext {
   background: linear-gradient(to right, #ff4343, #ff5fd2);
@@ -62,25 +71,41 @@
 }
 .heroleft {
   color: white;
-  font-size: 2.5em;
+  font-size: 2em;
   font-family: "Raleway", sans-serif;
   font-weight: bold;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  padding: 6rem;
+  width: 1375px;
+  height: 645px;
+  gap: 0px;
+  opacity: 0.6px;
+}
+.heroleft h1 {
+  width: 729px;
+  height: 261px;
+  top: 237px;
+  left: 159px;
+  gap: 0px;
+  opacity: 0px;
 }
 
 .heroleft p {
-  font-size: 1.1rem;
-  font-weight: lighter;
-  margin: 2rem 0rem;
-  width: 729px;
+  width: 520px;
+  height: 69px;
+  top: 522px;
+  left: 160px;
+  gap: 0px;
+  opacity: 0px;
+  font-family: Raleway;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 23.48px;
+  text-align: left;
 }
 .heroleft button {
   width: 189px;
   height: 63px;
-  border-radius: 8px;
   font-weight: 700;
   font-size: 1.1rem;
   font-family: "Raleway", sans-serif;
@@ -88,15 +113,22 @@
   border-style: none;
   cursor: pointer;
   background-image: linear-gradient(to right, #4ad0ed, #005aad);
+  top: 651px;
+  left: 160px;
+  padding: 20px 40px 20px 40px;
+  gap: 10px;
+  border-radius: 8px;
+  opacity: 0px;
+  margin-left: 6rem;
 }
-.heroright {
+/* .heroright {
   height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-}
+} */
 .forms {
   font-family: "Raleway", sans-serif;
   display: flex;
@@ -106,24 +138,35 @@
   width: 1200px;
   background-color: white;
   padding: 2rem;
-  border-radius: 2em; 
+  border-radius: 2em;
+  text-align: center;
+  margin: auto;
+  width: 1150px;
+  height: 168px;
+  top: 837px;
+  left: 385px;
+  gap: 0px;
+  border-radius: 16px;
+  opacity: 0px;
 }
 .time {
   display: flex;
+  align-items: center;
+  flex-direction: column;
+  /* justify-content:baseline; */
+}
+.timing {
+  display: flex;
   justify-content: space-around;
 }
-/* .time,
-.forms button {
-  grid-column-start: 1;
-  grid-column-end: 3;
+label {
+  font-family: Raleway;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 18.78px;
+  text-align: left;
+  /* margin: 1.2rem 0rem; */
 }
-
-.location,
-.typeoftruck {
-  display: flex;
-  flex-direction: column;
-  gap: 1.2rem;
-} */
 .forms button {
   height: 2rem;
   width: 6rem;
@@ -143,6 +186,7 @@
   font-family: "Raleway", sans-serif;
   border-width: 1px;
   text-align: center;
+  padding: 0rem 1.2em;
 }
 .selection:focus {
   border-color: #005aad;
@@ -155,7 +199,7 @@
   font-size: large;
   height: 2rem;
   border-radius: 8px;
-  width: 60%;
+  width: 90%;
   border-width: 1px;
   font-family: "Raleway", sans-serif;
   text-align: center;
@@ -163,10 +207,17 @@
 .heroright h1 {
   font-family: "Raleway", sans-serif;
   text-align: center;
+  margin: auto;
   background-color: #0052a9;
-  padding: 0.3rem 2rem;
-  border-radius: 10px 10px 0px 0px;
   color: white;
+  width: 187px;
+  height: 43px;
+  top: 794px;
+  left: 867px;
+  padding: 10px 40px 10px 40px;
+  gap: 10px;
+  border-radius: 16px 16px 0px 0px;
+  opacity: 0px;
 }
 /* process */
 .header {
@@ -174,10 +225,18 @@
   padding: 2rem;
   line-height: 4rem;
   font-family: "Raleway", sans-serif;
-  padding-top: 14rem;
-  
+  /* padding-top: 14rem; */
 }
-.header p,.header2 p{
+.header1{
+  text-align: center;
+  padding: 2rem;
+  line-height: 4rem;
+  font-family: "Raleway", sans-serif;
+  margin-top: 10rem;
+}
+.header1 p,
+.header2 p ,
+.header p{
   font-size: 1.5rem;
   text-decoration: underline;
   text-transform: uppercase;
@@ -185,7 +244,7 @@
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
 }
-.header h1 {
+.header1 h1,.header h1 {
   font-size: 3rem;
 }
 
@@ -193,16 +252,21 @@
   display: flex;
   justify-content: space-around;
 }
+.card {
+  width: 384px;
+  height: 539px;
+margin-top: 2rem;
+  position: relative;
+}
 .card1,
 .card2,
 .card3 {
   margin-top: 5rem;
-  height: 400px;
+  height: 384px;
   width: 384px;
   text-align: center;
   border-radius: 16px;
-  z-index: 2;
-  position: relative;
+  z-index: 1;
   font-family: "Raleway", sans-serif;
 }
 .float {
@@ -211,7 +275,7 @@
   width: 200px;
   margin: auto;
   left: 100px;
-  top: -134px;
+  top: -100px;
   text-align: center;
   z-index: -1;
   opacity: 20%;
@@ -219,6 +283,9 @@
   line-height: 300px;
   font-size: 250px;
   font-family: "Bebas Neue", sans-serif;
+  opacity: 0.2px;
+  font-weight: 400;
+  padding: 2rem 0rem;
 }
 .card1 {
   background-image: linear-gradient(to bottom right, #c1dfff, #ffffff);
@@ -229,7 +296,9 @@
 .card3 {
   background-image: linear-gradient(to bottom right, #ffeec1, #ffffff);
 }
-.card1 p,.card2 p,.card3 p{
+.card1 p,
+.card2 p,
+.card3 p {
   padding: 1rem 2rem;
 }
 .process button {
@@ -253,296 +322,355 @@
   font-size: 3rem;
   padding: 4rem 0rem 2rem 0rem;
 }
-.downarrow{
-  font-size:1.2rem;
+.iconimg {
+  padding: 1.5rem 0rem 1rem 0rem;
+}
+.downarrow {
+  font-size: 1.2rem;
   padding: 0.6rem;
 }
-.card1 h2{
-  color: #0054AE;
+.card1 h2 {
+  color: #0054ae;
   padding: 0.6rem;
 }
-.card2 h2{
-  color: #008F4B;
+.card2 h2 {
+  color: #008f4b;
   padding: 0.6rem;
 }
-.card3 h2{
-  color: #976C00;
+.card3 h2 {
+  color: #976c00;
   padding: 0.6rem;
 }
 
-.grid{
-  display: grid;
-  grid-template-columns: repeat(2,1fr);
-  grid-template-rows: repeat(3,1fr);
-  padding: 6rem;
-  align-items: center;
-  justify-items: center;
+.ourServices{
+  width: 100%;
+  text-align: center;
+  margin: auto;
 }
-.mostPopular{
-  grid-row-start: 1;
-  grid-row-end:3 ;
-  border-radius: 16px;
-  background-color: #F9F9F9;
+.flexbox {
+  display: flex;
+  justify-content: center;
+  /* padding: 6rem; */
+gap: 15px;
+
+}
+.flexleft,
+.flexright {
   display: flex;
   flex-direction: column;
-  padding: 60px 0px ;
-  width: 790px;
-  height: 687px;
-  gap :25px;
+  gap: 25px;
+}
+.mostPopular {
+  background-color: #f9f9f9;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  justify-items: center;
   text-align: left;
   box-shadow: 0px 0px 10.7px 0px #00000026;
+
+  width: 790px;
+  height: 860px;
+  top: 293px;
+  left: 160px;
+  padding: 60px 0px 0px 0px;
+  gap: 34px;
+  border-radius: 16px;
+  border: 1px;
+  opacity: 0px;
 }
-.mostPopular img{
+.mostPopular img {
   border-radius: 0px 0px 16px 16px;
-  height: 420px;
+  height: 460px;
+  object-fit: cover;
 }
 
-.text h1{
-  font-family:"Raleway", sans-serif;
-font-size: 48px;
-font-weight: 700;
-line-height: 56.35px;
-text-align: left;
-padding: 1.5rem 0rem;
+.text h1 {
+  font-family: "Raleway", sans-serif;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 56.35px;
+  text-align: left;
+  padding: 1.5rem 0rem;
+  width: 525px;
+  height: 112px;
+  gap: 0px;
+  opacity: 0px;
 }
-.text div{
+.text div {
   font-family: Raleway;
-font-size: 20px;
-font-weight: 400;
-line-height: 23.48px;
-text-align: left;
-padding-bottom: 1.5rem;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 23.48px;
+  text-align: left;
+  padding-bottom: 1.5rem;
+  /* width: 535px; */
+  height: 46px;
+  gap: 0px;
+  opacity: 0px;
 }
-.text span{
-  width: Hug (187px)px;
-height: Hug (39px)px;
-padding: 8px 16px 8px 16px;
-gap: 10px;
-border-radius: 36px;
-background-color: #ff4343;
-color: white;
+.text span {
+  width: Hug (187px) px;
+  height: Hug (39px) px;
+  padding: 8px 16px 8px 16px;
+  gap: 10px;
+  border-radius: 36px;
+  background-color: #ff4343;
+  color: white;
 }
-.text{
+.text {
   padding: 0rem 4rem;
 }
-.flexible{
-  grid-row-start: 1;
-  grid-row-end:2 ;
-  border-radius: 16px;
-  background-color:#F9F9F9;
+.flexible {
+  width: 790px;
+  height: 460px;
   display: flex;
   justify-content: space-evenly;
   align-items: flex-start;
-  width: 790px;
-  /* gap :10px; */
-  text-align: left;
+  top: 293px;
+  left: 970px;
+  /* padding: 10px 0px 0px 0px; */
+  gap: 10px;
+  border-radius: 16px;
+  border: 1px;
+  opacity: 0px;
   box-shadow: 0px 0px 10.7px 0px #00000026;
 }
-.image img{
+.image img {
   width: 395px;
-  height: 405px;
-  border-radius:16px 0px 0px 16px ;
+  height: 460px;
+  border-radius: 16px 0px 0px 16px;
 }
-.flexible span{
-  width: Hug (187px)px;
-height: Hug (39px)px;
-padding: 8px 16px 8px 16px;
-gap: 10px;
-border-radius: 36px;
-background-color: #FF8730;
-color: white;
+.flexible span {
+  width: Hug (187px) px;
+  height: Hug (39px) px;
+  padding: 8px 16px 8px 16px;
+  gap: 10px;
+  border-radius: 36px;
+  background-color: #ff8730;
+  color: white;
 }
-.text2{
+.text2 {
   padding: 60px 24px 60px 24px;
 }
-.text2 h1{
-  font-family: "Raleway",sans-serif;
-font-size: 32px;
-font-weight: 700;
-line-height: 37.57px;
-text-align: left;
-padding:20px 0px;
+.text2 h1 {
+  font-family: "Raleway", sans-serif;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 37.57px;
+  text-align: left;
+  padding: 20px 0px;
+  width: 341px;
+  height: 114px;
+  gap: 0px;
+  opacity: 0px;
 }
-.text2 div{
+.text2 div {
   font-family: Raleway;
-font-size: 20px;
-font-weight: 400;
-line-height: 23.48px;
-text-align: left;
-padding-bottom: 20px;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 23.48px;
+  text-align: left;
+  padding-bottom: 20px;
+  width: 341px;
+  height: 46px;
+  gap: 0px;
+  opacity: 0px;
 }
-.booknow{
-  width: Hug (171px)px;
-  height: Hug (53px)px;
+.booknow {
+  width: Hug (171px) px;
+  height: Hug (53px) px;
   padding: 16px 32px 16px 32px;
-  gap: 10px;
+  /* gap: 10px; */
   border-radius: 8px;
   border: 2px solid #0052a9;
   background-color: white;
   color: #0052a9;
+  margin: 1rem 0rem;
 }
-.hot{
-  grid-row-start: 2;
-  grid-row-end:4 ;
-  border-radius: 16px;
-  background-color: #F9F9F9;
+.hot {
+  background-color: #f9f9f9;
   /* background-color: pink; */
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  /* align-items: flex-start; */
-  padding: 60px 0px ;
-  width: 790px;
-  height: 687px;
-  gap :15px;
+  justify-content: space-between;
   text-align: left;
   box-shadow: 0px 0px 10.7px 0px #00000026;
+
+  width: 790px;
+  height: 860px;
+  top: 773px;
+  left: 970px;
+  padding: 60px 0px 0px 0px;
+  gap: 34px;
+  border-radius: 16px;
+  border: 1px;
+  opacity: 0px;
 }
-.text3 span{
-  width: Hug (187px)px;
-  height: Hug (39px)px;
+.text3 span {
+  width: Hug (187px) px;
+  height: Hug (39px) px;
   padding: 8px 16px 8px 16px;
   gap: 10px;
   border-radius: 36px;
   background-color: #004699;
   color: white;
 }
-.text3 h1{
+.text3 h1 {
   font-family: Raleway;
-font-size: 48px;
-font-weight: 700;
-line-height: 56.35px;
-text-align: left;
-padding: 1.5rem 0rem;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 56.35px;
+  text-align: left;
+  padding: 1.5rem 0rem;
+  width: 459px;
+  height: 112px;
+  gap: 0px;
+  opacity: 0px;
 }
-.text3 div{
+.text3 div {
   font-family: Raleway;
-font-size: 20px;
-font-weight: 400;
-line-height: 23.48px;
-text-align: left;
-padding-bottom: 1.5rem;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 23.48px;
+  text-align: left;
+  padding-bottom: 1.5rem;
+  /* width: 535px; */
+  height: 46px;
+  gap: 0px;
+  opacity: 0px;
 }
-.text3{
+.text3 {
   padding: 0rem 4rem;
-
 }
-.hot button{
-  margin: 1rem 0rem;
-}
-.hot img{
-  height: 400px;
+.hot img {
+  height: 460px;
   object-fit: cover;
   border-radius: 0px 0px 16px 16px;
 }
-.combine{
-  display: grid;
-  grid-template-columns: repeat(2,1fr);
+.combine {
+  display: flex;
+  justify-content: space-between;
   gap: 10px;
+  width: 790px;
+  height: 460px;
 }
-.colum{
-width: 340px;
-height: 400px;
-font-family: Raleway;
-padding: 0px 24px ;
-gap: 24px;
-border-radius: 16px;
-border: 1px 0px 0px 0px;
-opacity: 0px;
-box-shadow: 0px 0px 10.7px 0px #00000026;
-border: 1px solid #BBBBBB
+.colum {
+  width: 385px;
+  height: 460px;
+  top: 1233px;
+  left: 565px;
+  padding: 0px 24px;
+  gap: 24px;
+  border-radius: 16px;
+  border: 1px 0px 0px 0px;
+  opacity: 0px;
+  border: 1px solid #bbbbbb;
+  box-shadow: 0px 0px 10.7px 0px #00000026;
 }
-.icon2{
- font-size: 3rem;
- padding: 2rem; 
+.icon2 {
+  font-size: 3rem;
+  padding: 2rem;
 }
-.colum p{
+.colum p {
   padding: 1.2em 0rem;
   font-size: 20px;
 }
-.banner{
+.banner {
   display: flex;
   align-items: center;
+  width: 100%;
   justify-content: space-between;
-  background: linear-gradient(270.58deg, #4AD0ED -0.82%, #005AAD 99.02%);
+  background: linear-gradient(270.58deg, #4ad0ed -0.82%, #005aad 99.02%);
   position: relative;
   /* background: linear-gradient(to bottom right,#4AD0ED,#005AAD); */
-  
+  margin-top: 5rem;
 }
-.bannerimg{
+/* .bannerimg {
   width: 1919px;
-height: 464px;
-object-fit: cover;
-gap: 0px;
-opacity: 0.3px;
-z-index: -1;
-position: relative;
-
-}
-.bannerleft{
+  height: 464px;
+  object-fit: cover;
+  gap: 0px;
+  opacity: 0.3px;
+  z-index: -1;
+  position: relative;
+} */
+.bannerleft {
   position: absolute;
   z-index: 0;
-  padding: 10rem;
-  
+  padding-left: 10rem;
 }
-.bannerleft h1{
+.bannerright{
+
+}
+.bannerleft h1 {
   font-family: Raleway;
-font-size: 64px;
-font-weight: 800;
-line-height: 75.14px;
-text-align: left;
-color: white;
+  font-size: 64px;
+  font-weight: 800;
+  line-height: 75.14px;
+  text-align: left;
+  color: white;
 }
-.bannerleft p{
+.bannerleft p {
   font-family: Raleway;
-font-size: 20px;
-font-weight: 400;
-line-height: 23.48px;
-text-align: left;
-color: white;
-padding: 2rem 0rem;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 23.48px;
+  text-align: left;
+  color: white;
+  padding: 2rem 0rem;
 }
-.yellowtext{
+.yellowtext {
   background: yellow;
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
 }
-.bannerleft  button{
+.bannerleft button {
   background-color: transparent;
-  width: Hug (172px)px;
-height: Hug (61px)px;
-top: 330px;
-left: 160px;
-padding: 20px 40px 20px 40px;
-gap: 10px;
-border-radius: 8px;
-border: 2px solid white;
-color: white;
-opacity: 0px;
+  width: Hug (172px) px;
+  height: Hug (61px) px;
+  top: 330px;
+  left: 160px;
+  padding: 20px 40px 20px 40px;
+  gap: 10px;
+  border-radius: 8px;
+  border: 2px solid white;
+  color: white;
+  opacity: 0px;
+}
+.bannerright {
+  z-index: 1;
+  position: relative;
 
 }
-.bannerright{
-  /* padding-right: 2rem; */
-}
 
-.aboutus,.FAQ{
+.aboutus{
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  margin-top: 5rem;
+}
+.FAQ {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  /* gap: 10px; */
 }
-.aboutus{
+.aboutus {
   height: 1275px;
 }
-.aboutusright,.aboutusleft{
-width: 790px;
-}
-.aboutusleft img ,.aboutusright img{
+/* .aboutusright,
+.aboutusleft {
   width: 790px;
-  height: 800px;
+} */
+.aboutusleft img,
+.aboutusright img {
+  /* width: 790px;
+  height: 800px; */
   object-fit: cover;
   border-radius: 16px;
 }
-.aboutusleft p{
+.aboutusleft p {
   width: 740px;
   height: 156px;
   top: 902px;
@@ -554,9 +682,10 @@ width: 790px;
   font-weight: 400;
   line-height: 26px;
   text-align: left;
-padding: 2rem 0rem;    
+  padding: 2rem 0rem;
 }
-.aboutusleft button ,.header3 button{
+.aboutusleft button,
+.header3 button {
   width: 189px;
   height: 63px;
   border-radius: 8px;
@@ -569,13 +698,13 @@ padding: 2rem 0rem;
   background-image: linear-gradient(to right, #4ad0ed, #005aad);
   margin-top: 2rem;
 }
-.header3{
+.header3 {
   text-align: left;
   padding: 2rem;
   line-height: 4rem;
   font-family: "Raleway", sans-serif;
 }
-.header3 p{
+.header3 p {
   font-size: 1.5rem;
   text-decoration: underline;
   background: linear-gradient(to right, #4ad0ed, #005aad);
@@ -583,11 +712,9 @@ padding: 2rem 0rem;
   -webkit-background-clip: text;
   font-weight: bold;
 }
-.header3 h1{
+.header3 h1 {
   width: 605px;
   height: 112px;
-  top: 122px;
-  left: 1022px;
   gap: 0px;
   opacity: 0px;
   font-family: Raleway;
@@ -595,13 +722,11 @@ padding: 2rem 0rem;
   font-weight: 800;
   line-height: 56.35px;
   text-align: left;
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
-.header3 div{
+.header3 div {
   width: 633px;
   height: 46px;
-  top: 258px;
-  left: 1022px;
   gap: 0px;
   opacity: 0px;
   font-family: Raleway;
@@ -610,85 +735,89 @@ padding: 2rem 0rem;
   line-height: 23.48px;
   text-align: left;
 }
-.FAQ{
-  width: Hug (860px)px;
-height: Fixed (326px)px;
-top: 100px;
-left: 900px;
-gap: 50px;
-opacity: 0px;
+.FAQ {
+  width:100%;
+  height:609px;
+  gap: 50px;
+  opacity: 0px;
 }
-.FAQ ul li{
+.question {
   font-family: Raleway;
-font-size: 32px;
-font-weight: 700;
-line-height: 37.57px;
-text-align: left;
-list-style: none;
-padding: 1.2rem 0rem;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 37.57px;
+  text-align: left;
+  list-style: none;
+  padding: 1.2rem 0rem;
+  display: flex;
+  justify-content: space-between;
 }
-.icon3{
+.icon3 {
   padding-left: 1.5rem;
 }
-.footer{ 
-height: 609px;
-top: 10316px;
-left: -2287px;
-gap: 0px;
-opacity: 0px;
-background: #0056B1;
-display: flex;
-align-items: center;
-justify-content: space-around;
+.footer {
+  height: 609px;
+  top: 10316px;
+  left: -2287px;
+  gap: 0px;
+  opacity: 0px;
+  background: #0056b1;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
-.col1{
+.col1 {
   width: 385px;
-height: 115px;
-top: 234px;
-left: 160px;
-gap: 0px;
-opacity: 0px;
-font-family: Raleway;
-font-size: 20px;
-font-weight: 400;
-line-height: 23.48px;
-text-align: left;
+  height: 115px;
+  top: 234px;
+  left: 160px;
+  gap: 0px;
+  opacity: 0px;
+  font-family: Raleway;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 23.48px;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
-.col ul li{
+.col ul li {
   list-style: none;
   width: 122px;
-height: 23px;
-top: 303px;
-left: 700px;
-gap: 0px;
-opacity: 0px;
-font-family: Raleway;
-font-size: 20px;
-font-weight: 400;
-line-height: 23.48px;
-text-align: left;
-color: white;
-padding: 1rem 0rem;
+  height: 23px;
+  top: 303px;
+  left: 700px;
+  gap: 0px;
+  opacity: 0px;
+  font-family: Raleway;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 23.48px;
+  text-align: left;
+  color: white;
+  padding: 1rem 0rem;
 }
-.col h3{
+.col h3 {
   color: white;
   font-family: Raleway;
   font-weight: bold;
   font-size: 1.5rem;
 }
-.col p,.col1 p{
+.col p,
+.col1 p {
   color: white;
   font-family: Raleway;
-padding: 1.2rem 0rem;
+  padding: 1.2rem 0rem;
 }
-.col form input{
+.col form input {
   width: 420px;
   height: 50px;
   gap: 0px;
   border-radius: 16px;
   border-style: none;
 }
-.col button{
+.col button {
   width: 8em;
   height: 3em;
   font-weight: bolder;
@@ -698,4 +827,23 @@ padding: 1.2rem 0rem;
   background: transparent;
   border-color: white;
   margin-top: 1.2rem;
+}
+@media only screen and (max-width: 1440px) {
+ .flexbox{
+/* flex-wrap: wrap; */
+justify-content: center;
+gap: 15px;
+scale: 0.85;
+ }
+ .aboutus,.bannerleft{
+scale: 0.80;
+ }
+ .bannerright{
+  scale: 0.5;
+  gap: 15px;
+    left: 100px;
+ }
+ .bannerleft{
+  padding-left: 5rem;
+ }
 }
