--- a/src/App.css
+++ b/src/App.css
@@ -830,7 +830,7 @@ gap: 15px;
 }
 
 .swiper {
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
 }
 
@@ -847,7 +847,7 @@ gap: 15px;
 
 .swiper {
   margin:auto;
-  width: 1920px;
+  /* width: 1920px; */
 height: 710px;
 top: 45px;
 gap: 0px;
