--- a/src/App.css
+++ b/src/App.css
@@ -449,6 +449,7 @@ label {
   border-radius: 36px;
   background-color: #ff8730;
   color: white;
+  text-align: left;
 }
 .text2 {
   padding: 60px 24px 60px 24px;
@@ -601,6 +602,25 @@ label {
   padding-left: 10rem;
 }
 .bannerright {
+  animation: incomingtruck linear ;
+  animation-timeline: view();
+  animation-range: entry 0% cover 40%;
+  transition-timing-function: ease-in-out;
+  transition-delay: 20s;
+}
+@keyframes incomingtruck {
+  0% {
+    left: 0;
+  }
+  25%{
+    left: 50%;
+  }
+  50% {
+    left: 100%;
+  }
+  100% {
+    left: 0;
+  }
 }
 .bannerleft h1 {
   font-family: Raleway;
@@ -861,7 +881,7 @@ label {
   align-content: center;
   gap: 20px;
 }
-.starrating{
+.starrating {
   display: flex;
   gap: 10px;
 }
@@ -870,35 +890,34 @@ label {
   width: 720px;
   height: 342px;
   font-family: Raleway;
-font-size: 22px;
-font-weight: 600;
-line-height: 42px;
-text-align: left;
-padding: 2rem;
+  font-size: 22px;
+  font-weight: 600;
+  line-height: 42px;
+  text-align: left;
+  padding: 2rem;
 }
 .colleft h3,
-.colright h3{
+.colright h3 {
   padding: 2rem 0rem;
 }
-.driverinfo{
+.driverinfo {
   display: flex;
   gap: 20px;
 }
-.header3 h2{
+.header3 h2 {
   font-family: Raleway;
-font-size: 48px;
-font-weight: 800;
-line-height: 56.35px;
-text-align: left;
-
+  font-size: 48px;
+  font-weight: 800;
+  line-height: 56.35px;
+  text-align: left;
 }
-.header3 h4{
+.header3 h4 {
   font-family: Raleway;
-font-size: 20px;
-font-weight: 400;
-line-height: 23.48px;
-text-align: left;
-padding: 2rem 0rem;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 23.48px;
+  text-align: left;
+  padding: 2rem 0rem;
 }
 @media only screen and (max-width: 1440px) {
   .flexbox {
