--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,26 @@
   align-items: center;
   border-bottom: 1px solid white;
   color: white;
+  width: 100%;
 }
+@keyframes slidefromtop{
+  form{
+    transform: translateY(-300px);
+  }
+  to{
+    transform: translateY(0);
+  }
+}
+.navbar{
+animation-name: slidefromtop ;
+animation-duration: 4s;
+animation-timing-function: ease-in ;
+animation-delay:0 ;
+animation-iteration-count: 1;
+animation-direction: normal;
+animation-fill-mode: none;
+}
+
 .logo {
   width: 223px;
   height: 112px;
@@ -54,6 +73,21 @@
   /* width: 1920px; */
   /* background-repeat: no-repeat; */
   object-fit: contain;
+  animation-name: slidefrombottom ;
+animation-duration: 4s;
+animation-timing-function: ease-in ;
+animation-delay:0 ;
+animation-iteration-count: 1;
+animation-direction: reverse;
+animation-fill-mode: none;
+}
+@keyframes slidefrombottom{
+  form{
+    transform: translateY(-900px);
+  }
+  to{
+    transform: translateY(0);
+  }
 }
 .herotext {
   width: 729px;
@@ -602,13 +636,14 @@ label {
   padding-left: 10rem;
 }
 .bannerright {
-  animation: incomingtruck linear ;
+  animation: movingtruck linear ;
   animation-timeline: view();
   animation-range: entry 0% cover 40%;
-  transition-timing-function: ease-in-out;
-  transition-delay: 20s;
+  transition-timing-function: ease-in;
+  /* transition-delay: 20s; */
+  animation-duration: 10s;
 }
-@keyframes incomingtruck {
+@keyframes movingtruck {
   0% {
     left: 0;
   }
