--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   color: white;
   width: 100%;
 }
-@keyframes slidefromtop{
+/* @keyframes slidefromtop{
   form{
     transform: translateY(-300px);
   }
@@ -29,7 +29,7 @@ animation-delay:0 ;
 animation-iteration-count: 1;
 animation-direction: normal;
 animation-fill-mode: none;
-}
+} */
 
 .logo {
   width: 223px;
