--- a/src/App.css
+++ b/src/App.css
@@ -13,23 +13,6 @@
   color: white;
   width: 100%;
 }
-/* @keyframes slidefromtop{
-  form{
-    transform: translateY(-300px);
-  }
-  to{
-    transform: translateY(0);
-  }
-}
-.navbar{
-animation-name: slidefromtop ;
-animation-duration: 4s;
-animation-timing-function: ease-in ;
-animation-delay:0 ;
-animation-iteration-count: 1;
-animation-direction: normal;
-animation-fill-mode: none;
-} */
 
 .logo {
   width: 223px;
@@ -81,14 +64,7 @@ animation-iteration-count: 1;
 animation-direction: reverse;
 animation-fill-mode: none;
 }
-@keyframes slidefrombottom{
-  form{
-    transform: translateY(-900px);
-  }
-  to{
-    transform: translateY(0);
-  }
-}
+
 .herotext {
   width: 729px;
   height: 354px;
@@ -635,28 +611,15 @@ label {
   z-index: 0;
   padding-left: 10rem;
 }
-.bannerright {
+/* .bannerright {
   animation: movingtruck linear ;
   animation-timeline: view();
   animation-range: entry 0% cover 40%;
   transition-timing-function: ease-in;
   /* transition-delay: 20s; */
-  animation-duration: 10s;
-}
-@keyframes movingtruck {
-  0% {
-    left: 0;
-  }
-  25%{
-    left: 50%;
-  }
-  50% {
-    left: 100%;
-  }
-  100% {
-    left: 0;
-  }
-}
+  /* animation-duration: 10s; */
+/* } */ 
+
 .bannerleft h1 {
   font-family: Raleway;
   font-size: 64px;
